--- a/app/(pages)/AML-KYC-policy/components/Banner/index.module.css
+++ b/app/(pages)/AML-KYC-policy/components/Banner/index.module.css
@@ -5,15 +5,17 @@
 }
 
 .bannerContext {
-  background-image: url("/images/bg-pages.svg");
-  background-color: rgb(219, 218, 224);
+  background-color: #F4F2FB;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-size: cover; 
 }
 
 .bannerContext h1 {
-  color: black;
+  color: rgb(184, 30, 148);
+}
+
+.bannerContext p{
+  color: #505050;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -23,7 +25,33 @@
   }
 
   .bannerContext {
-    padding: 150px 5px 150px 5px;
+    padding: 100px 10px 100px 10px;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 2em;
+    font-weight: 600;
+  }
+
+  .bannerContext p {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
+}
+
+/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
+@media (min-width: 374px) {
+  .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -42,32 +70,6 @@
   }
 }
 
-/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
-@media (min-width: 374px) {
-  .banner {
-    padding: 80px 10px 0 10px;
-  }
-
-  .bannerContext {
-    padding: 180px 5px 180px 5px;
-    width: 100%;
-    height: 50%;
-    margin: auto;
-    border-radius: 10px;
-    text-align: center;
-  }
-
-  .bannerContext h1 {
-    font-size: 2.9em;
-    font-weight: 600;
-  }
-
-  .bannerContext p {
-    font-size: 0.9em;
-    font-weight: 600;
-  }
-}
-
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
   .banner {
@@ -75,7 +77,7 @@
   }
 
   .bannerContext {
-    padding: 180px 5px 180px 5px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -101,7 +103,7 @@
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -127,7 +129,7 @@
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -153,9 +155,9 @@
   }
 
   .bannerContext {
-    padding: 220px 10px 220px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
-    height: 50%;
+    height: 100%;
     margin: auto;
     border-radius: 10px;
     text-align: center;
