--- a/app/(pages)/privacy-policy/components/Banner/index.module.css
+++ b/app/(pages)/privacy-policy/components/Banner/index.module.css
@@ -5,26 +5,53 @@
 }
 
 .bannerContext {
-   background-image: url('/images/bg-pages.svg');
-  background-color: rgb(219, 218, 224);
+  background-color: #F4F2FB;
   background-repeat: no-repeat;
-  background-size: cover;
-    background-attachment: fixed;
-
+  background-size: cover; 
 }
 
 .bannerContext h1 {
-  color: black;
+  color: rgb(184, 30, 148);
+}
+
+.bannerContext p{
+  color: #505050;
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
-    .banner {
+  .banner {
     padding: 80px 10px 0 10px;
   }
 
   .bannerContext {
-    padding: 150px 0 150px 0;
+    padding: 100px 10px 100px 10px;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .bannerContext h1 {
+    font-size: 2em;
+    font-weight: 600;
+  }
+
+  .bannerContext p {
+    font-size: 0.9em;
+    font-weight: 600;
+  }
+}
+
+/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
+@media (min-width: 374px) {
+  .banner {
+    padding: 80px 10px 0 10px;
+  }
+
+  .bannerContext {
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -36,33 +63,7 @@
     font-size: 2.5em;
     font-weight: 600;
   }
-  
-  .bannerContext p {
-    font-size: 0.9em;
-    font-weight: 600;
-  }
-}
 
-/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
-@media (min-width: 374px) {
-    .banner {
-    padding: 80px 10px 0 10px;
-  }
-
-  .bannerContext {
-    padding: 180px 0 180px 0;
-    width: 100%;
-    height: 50%;
-    margin: auto;
-    border-radius: 10px;
-    text-align: center;
-  }
-
-  .bannerContext h1 {
-    font-size: 2.9em;
-    font-weight: 600;
-  }
-  
   .bannerContext p {
     font-size: 0.9em;
     font-weight: 600;
@@ -71,12 +72,12 @@
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
-     .banner {
+  .banner {
     padding: 80px 10px 0 10px;
   }
 
   .bannerContext {
-    padding: 180px 0 180px 0;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -88,7 +89,7 @@
     font-size: 2.9em;
     font-weight: 600;
   }
-  
+
   .bannerContext p {
     font-size: 0.9em;
     font-weight: 600;
@@ -97,12 +98,12 @@
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
-    .banner {
+  .banner {
     padding: 80px 10px 0 10px;
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -114,7 +115,7 @@
     font-size: 3.5em;
     font-weight: 600;
   }
-  
+
   .bannerContext p {
     font-size: 1.1em;
     font-weight: 600;
@@ -123,12 +124,12 @@
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
-   .banner {
+  .banner {
     padding: 80px 10px 0 10px;
   }
 
   .bannerContext {
-    padding: 180px 10px 180px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
     height: 50%;
     margin: auto;
@@ -140,7 +141,7 @@
     font-size: 3.5em;
     font-weight: 600;
   }
-  
+
   .bannerContext p {
     font-size: 1.3em;
     font-weight: 600;
@@ -154,9 +155,9 @@
   }
 
   .bannerContext {
-    padding: 220px 10px 220px 10px;
+    padding: 100px 10px 100px 10px;
     width: 100%;
-    height: 50%;
+    height: 100%;
     margin: auto;
     border-radius: 10px;
     text-align: center;
@@ -166,7 +167,7 @@
     font-size: 3.5em;
     font-weight: 600;
   }
-  
+
   .bannerContext p {
     font-size: 1.3em;
     font-weight: 600;
